--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 
     <meta property="og:title" content="Postpartum Depression Treatment | FDA-Approved Digital Therapy" />
     <meta property="og:description" content="Get immediate support and proven 8-week treatment for postpartum depression. FDA-approved digital therapeutic with crisis support available now." />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="website" /> 
+    <script>
+      // Check if we were redirected from a 404
+      (function() {
+        var redirect = sessionStorage.redirect;
+        delete sessionStorage.redirect;
+        if (redirect && redirect !== location.href) {
+          history.replaceState(null, null, redirect);
+        }
+      })();
+</script>
   </head>
 
   <body>
