--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
       // Store the current path and redirect to index.html
       sessionStorage.redirect = location.href;
     </script>
-    <meta http-equiv="refresh" content="0;URL='/'">
+    <meta http-equiv="refresh" content="0;URL='/mamalift-landing-page-prototype/'">
   </head>
   <body>
     Redirecting...
